generate main sections

--- a/4-recurrent_neural_networks/tutorial_4_models-solutions.ipynb
+++ b/4-recurrent_neural_networks/tutorial_4_models-solutions.ipynb
@@ -9,26 +9,18 @@
     "In this tutorial, we will learn how to use Perceptron and Multi-Layer Perceptron (MLP) neural networks to solve simple classification tasks. We will walk through the necessary steps to implement and train these networks using PyTorch.\n",
     "\n",
     "## Index\n",
-    "1. Installs, Packages, and Auxiliary Functions\n",
-    "2. Preparing for the Training\n",
-    "    - Training Parameters\n",
-    "    - Define the Task (Sample Dataset)\n",
-    "    - Define the Network\n",
-    "    - Define the Algorithm to Train the Network\n",
-    "    - Save Config\n",
-    "3. Supervised Training of the Network\n",
-    "4. Run the Trained Network (and Save the Behavioral Data)\n",
-    "5. Network Analysis\n",
-    "    - Behavioral Analysis\n",
-    "    - General Neural Analysis\n",
-    "    - Stimulus and Choice Decoding from Network Activity"
+    "1. Imports\n",
+    "2. Models\n",
+    "    - Perceptron\n",
+    "    - Multi-Layer Perceptron\n",
+    "2. Data\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Installs, Packages, and Auxiliary Functions"
+    "## Imports"
    ]
   },
   {
@@ -37,85 +29,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Install necessary packages\n",
-    "!pip install torch numpy matplotlib"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Import required packages\n",
     "import torch\n",
     "import torch.nn as nn\n",
-    "import torch.optim as optim\n",
+    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import torch.optim as optim"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. Preparing for the Training\n",
-    "\n",
-    "### a. Training Parameters\n",
-    "First, we will set up the parameters that will be used throughout the training process, such as learning rates, batch sizes, and the number of epochs."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Training parameters\n",
-    "learning_rate = 0.01\n",
-    "num_epochs = 1000\n",
-    "hidden_size = 2\n",
-    "input_size = 2\n",
-    "output_size = 1"
+    "## Models"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### b. Define the Task (Sample Dataset)\n",
-    "We will define two tasks: a linearly separable task and the XOR task. These tasks will be used to train and evaluate our Perceptron and MLP models."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def generate_linear_data(N=100, D=2):\n",
-    "    X = np.random.randn(N, D)\n",
-    "    X[:N//2, :] += 1\n",
-    "    X[N//2:, :] -= 1\n",
-    "    Y = np.concatenate((np.zeros(N//2), np.ones(N//2)))\n",
-    "    X = torch.tensor(X, dtype=torch.float32)\n",
-    "    Y = torch.tensor(Y, dtype=torch.float32)\n",
-    "    return X, Y\n",
-    "\n",
-    "def generate_xor_data():\n",
-    "    X = np.array([[0, 0], [0, 1], [1, 0], [1, 1]], dtype=np.float32)\n",
-    "    Y = np.array([0, 1, 1, 0], dtype=np.float32)\n",
-    "    X = torch.tensor(X)\n",
-    "    Y = torch.tensor(Y)\n",
-    "    return X, Y"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### c. Define the Network\n",
-    "Next, we define our Perceptron and MLP models."
+    "### Perceptron"
    ]
   },
   {
@@ -132,19 +64,6 @@
     "\n",
     "    def forward(self, x):\n",
     "        x = torch.matmul(x, self.W.T) + self.b\n",
-    "        return x\n",
-    "\n",
-    "class MLP(nn.Module):\n",
-    "    def __init__(self, input_size, hidden_size, output_size):\n",
-    "        super(MLP, self).__init__()\n",
-    "        self.W_ih = nn.Parameter(torch.randn(hidden_size, input_size) * 0.01)\n",
-    "        self.b_ih = nn.Parameter(torch.zeros(hidden_size))\n",
-    "        self.W_ho = nn.Parameter(torch.randn(output_size, hidden_size) * 0.01)\n",
-    "        self.b_ho = nn.Parameter(torch.zeros(output_size))\n",
-    "\n",
-    "    def forward(self, x):\n",
-    "        h = torch.relu(torch.matmul(x, self.W_ih.T) + self.b_ih)\n",
-    "        x = torch.matmul(h, self.W_ho.T) + self.b_ho\n",
     "        return x"
    ]
   },
@@ -152,8 +71,88 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### d. Define the Algorithm to Train the Network\n",
-    "We will create functions to train and evaluate our networks."
+    "### Multi-layer perceptron"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MLP(nn.Module):\n",
+    "    def __init__(self, input_size, hidden_size, output_size):\n",
+    "        super(MLP, self).__init__()\n",
+    "        self.input_size = input_size\n",
+    "        self.hidden_size = hidden_size\n",
+    "        self.output_size = output_size\n",
+    "\n",
+    "        # Initialize weights and biases for the first Linear layer\n",
+    "        self.W_ih = nn.Parameter(torch.randn(hidden_size, input_size) * 0.01)\n",
+    "        self.b_ih = nn.Parameter(torch.zeros(hidden_size))\n",
+    "\n",
+    "        # Initialize weights and biases for the second Linear layer\n",
+    "        self.W_ho = nn.Parameter(torch.randn(output_size, hidden_size) * 0.01)\n",
+    "        self.b_ho = nn.Parameter(torch.zeros(output_size))\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        # Apply the first linear layer with ReLU activation\n",
+    "        h = torch.relu(torch.matmul(x, self.W_ih.T) + self.b_ih)\n",
+    "\n",
+    "        # Apply the second linear layer\n",
+    "        x = torch.matmul(h, self.W_ho.T) + self.b_ho\n",
+    "        return x\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_linear_data(N=100, D=2):\n",
+    "    X = np.random.randn(N, D)\n",
+    "    X[:N//2, :] += 1\n",
+    "    X[N//2:, :] -= 1\n",
+    "    Y = np.concatenate((np.zeros(N//2), np.ones(N//2)))\n",
+    "    X = torch.tensor(X, dtype=torch.float32)\n",
+    "    Y = torch.tensor(Y, dtype=torch.long)\n",
+    "    return X, Y\n",
+    "\n",
+    "def generate_xor_data(n_points=100):\n",
+    "    # Base XOR points\n",
+    "    base_points = np.array([[0, 0], [0, 1], [1, 0], [1, 1]], dtype=np.float32)\n",
+    "    base_labels = np.array([0, 1, 1, 0], dtype=np.float32)\n",
+    "    \n",
+    "    # Generate more points around the base points\n",
+    "    X = []\n",
+    "    Y = []\n",
+    "    for _ in range(n_points // 4):\n",
+    "        for point, label in zip(base_points, base_labels):\n",
+    "            noise = np.random.normal(0, 0.1, size=point.shape)\n",
+    "            X.append(point + noise)\n",
+    "            Y.append(label)\n",
+    "    \n",
+    "    X = np.array(X, dtype=np.float32)\n",
+    "    Y = np.array(Y, dtype=np.float32)\n",
+    "    \n",
+    "    X = torch.tensor(X)\n",
+    "    Y = torch.tensor(Y)\n",
+    "    return X, Y\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Training"
    ]
   },
   {
@@ -166,138 +165,18 @@
     "    for epoch in range(num_epochs):\n",
     "        optimizer.zero_grad()\n",
     "        outputs = model(X)\n",
-    "        loss = criterion(outputs.squeeze(), Y.view(-1, 1))\n",
+    "        loss = criterion(outputs, Y.float().view(-1, 1))\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
     "        if (epoch + 1) % print_interval == 0:\n",
-    "            print(f'Epoch [{epoch + 1}/{num_epochs}], Loss: {loss.item():.4f}')\n",
-    "\n",
-    "def evaluate_model(model, X):\n",
-    "    with torch.no_grad():\n",
-    "        outputs = model(X)\n",
-    "        predicted = (torch.sigmoid(outputs.squeeze()) > 0.5).float()\n",
-    "    return predicted"
+    "            print(f'Epoch [{epoch + 1}/{num_epochs}], Loss: {loss.item():.4f}')\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### e. Save Config\n",
-    "You can save your configuration settings for reproducibility."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "config = {\n",
-    "    'learning_rate': learning_rate,\n",
-    "    'num_epochs': num_epochs,\n",
-    "    'hidden_size': hidden_size,\n",
-    "    'input_size': input_size,\n",
-    "    'output_size': output_size\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 3. Supervised Training of the Network\n",
-    "We will train our Perceptron and MLP on the defined tasks."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Training Perceptron on linear data\n",
-    "X_linear, Y_linear = generate_linear_data()\n",
-    "model_perceptron = Perceptron(input_size, output_size)\n",
-    "criterion = nn.BCEWithLogitsLoss()\n",
-    "optimizer = optim.SGD(model_perceptron.parameters(), lr=learning_rate)\n",
-    "train_model(model_perceptron, criterion, optimizer, X_linear, Y_linear)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Training MLP on XOR data\n",
-    "X_xor, Y_xor = generate_xor_data()\n",
-    "model_mlp = MLP(input_size, hidden_size, output_size)\n",
-    "optimizer = optim.SGD(model_mlp.parameters(), lr=learning_rate)\n",
-    "train_model(model_mlp, criterion, optimizer, X_xor, Y_xor, num_epochs=10000)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 4. Run the Trained Network (and Save the Behavioral Data)\n",
-    "Run the trained models on test data and save the predictions."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Evaluate Perceptron\n",
-    "predictions_perceptron = evaluate_model(model_perceptron, X_linear)\n",
-    "print(\"Perceptron Predictions on Linear Data:\", predictions_perceptron)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Evaluate MLP\n",
-    "predictions_mlp = evaluate_model(model_mlp, X_xor)\n",
-    "print(\"MLP Predictions on XOR Data:\", predictions_mlp)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 5. Network Analysis\n",
-    "\n",
-    "### a. Behavioral Analysis\n",
-    "Analyze the accuracy of the models."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def accuracy(predictions, labels):\n",
-    "    return (predictions == labels).float().mean()\n",
-    "\n",
-    "acc_perceptron = accuracy(predictions_perceptron, Y_linear)\n",
-    "acc_mlp = accuracy(predictions_mlp, Y_xor)\n",
-    "print(f'Perceptron Accuracy on Linear Data: {acc_perceptron * 100:.2f}%')\n",
-    "print(f'MLP Accuracy on XOR Data: {acc_mlp * 100:.2f}%')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### b. General Neural Analysis\n",
-    "Plot the decision boundaries to visualize how the models are classifying the data."
+    "## Plotting"
    ]
   },
   {
@@ -314,38 +193,75 @@
     "    grid = torch.tensor(np.c_[xx.ravel(), yy.ravel()], dtype=torch.float32)\n",
     "    with torch.no_grad():\n",
     "        Z = model(grid)\n",
-    "        Z = torch.sigmoid(Z).numpy()\n",
+    "        Z = torch.sigmoid(Z).numpy()  # Apply sigmoid to the output\n",
     "        Z = (Z > 0.5).astype(int)\n",
     "    Z = Z.reshape(xx.shape)\n",
     "    plt.contourf(xx, yy, Z, alpha=0.8)\n",
     "    plt.scatter(X[:, 0], X[:, 1], c=Y, edgecolors='k', marker='o')\n",
     "    plt.title(title)\n",
-    "    plt.show()\n",
+    "    plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Testing the models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Task 1: Linearly Separate Two Clouds of Dots\n",
+    "X_linear, Y_linear = generate_linear_data()\n",
+    "input_size = 2\n",
+    "output_size = 1\n",
     "\n",
+    "# Perceptron\n",
+    "model_perceptron = Perceptron(input_size, output_size)\n",
+    "# Compute the binary Cross Entropy Loss \n",
+    "criterion = nn.BCEWithLogitsLoss()\n",
+    "# Optimize with Stochastic Gradient Descent \n",
+    "optimizer = optim.SGD(model_perceptron.parameters(), lr=0.01)\n",
+    "train_model(model_perceptron, criterion, optimizer, X_linear, Y_linear, num_epochs=1000, print_interval=100)\n",
     "plot_decision_boundary(model_perceptron, X_linear, Y_linear, 'Perceptron - Linear Data')\n",
+    "\n",
+    "# MLP\n",
+    "hidden_size = 2\n",
+    "model_mlp = MLP(input_size, hidden_size, output_size)\n",
+    "criterion = nn.BCEWithLogitsLoss()\n",
+    "optimizer = optim.SGD(model_mlp.parameters(), lr=0.01)\n",
+    "train_model(model_mlp, criterion, optimizer, X_linear, Y_linear, num_epochs=1000, print_interval=100)\n",
+    "plot_decision_boundary(model_mlp, X_linear, Y_linear, 'MLP - Linear Data')\n",
+    "\n",
+    "# Task 2: XOR Task\n",
+    "X_xor, Y_xor = generate_xor_data()\n",
+    "\n",
+    "# Perceptron\n",
+    "model_perceptron = Perceptron(input_size, output_size)\n",
+    "criterion = nn.BCEWithLogitsLoss()\n",
+    "optimizer = optim.SGD(model_perceptron.parameters(), lr=0.01)\n",
+    "train_model(model_perceptron, criterion, optimizer, X_xor, Y_xor, num_epochs=10000, print_interval=1000)\n",
+    "plot_decision_boundary(model_perceptron, X_xor, Y_xor, 'Perceptron - XOR Data')\n",
+    "\n",
+    "# MLP\n",
+    "model_mlp = MLP(input_size, hidden_size, output_size)\n",
+    "criterion = nn.BCEWithLogitsLoss()\n",
+    "optimizer = optim.SGD(model_mlp.parameters(), lr=0.1)\n",
+    "train_model(model_mlp, criterion, optimizer, X_xor, Y_xor, num_epochs=10000, print_interval=1000)\n",
     "plot_decision_boundary(model_mlp, X_xor, Y_xor, 'MLP - XOR Data')"
    ]
   }
  ],
  "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.8"
-  }
+   "name": "python"
+  },
+  "orig_nbformat": 4
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 2
 }
