--- a/4-recurrent_neural_networks/tutorial_4_models-solutions.ipynb
+++ b/4-recurrent_neural_networks/tutorial_4_models-solutions.ipynb
@@ -47,7 +47,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Perceptron"
+    "### Perceptron\n",
+    "\n",
+    "The Perceptron is one of the simplest types of artificial neural networks. It consists of a single layer of neurons, each with a set of weights and biases. The output of the Perceptron is calculated as the weighted sum of the inputs plus the bias, passed through an activation function.\n",
+    "\n",
+    "$$z = \\mathbf{w} \\cdot \\mathbf{x} + b = w_1 x_1 + w_2 x_2 + \\ldots + w_n x_n + b$$\n",
+    "\n",
+    "$$y = \\phi(z)$$\n",
+    "\n",
+    "Where:\n",
+    "\n",
+    "- $\\mathbf{w}$ is the weight vector\n",
+    "- $\\mathbf{x}$ is the input vector\n",
+    "- $b$ is the bias\n",
+    "- $\\phi$ is the activation function\n",
+    "\n",
+    "To implement the perceptron in PyTorch, we can create a class that inherits from `torch.nn.Module` and the define the different elements of the network in the constructor and the forward pass in the `forward` method. You can use the matrix multiplication operation `torch.matmul` to calculate the weighted sum of the inputs and the bias.\n",
+    "\n",
+    "```python"
    ]
   },
   {
@@ -71,7 +88,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Multi-layer perceptron"
+    "### Multi-layer perceptron\n",
+    "\n",
+    "THe multi-layer perceptron (MLP) is a type of feedforward neural network that consists of multiple layers of neurons. Each layer is fully connected to the next layer. The formula to calculate the output of an MLP is similar to the perceptron, but with the addition of non-linear activation functions between the layers:\n",
+    "\n",
+    "$$z^{(1)} = \\mathbf{W}^{(1)} \\cdot \\mathbf{x} + \\mathbf{b}^{(1)}$$\n",
+    "$$h^{(1)} = \\phi(z^{(1)})$$\n",
+    "$$z^{(2)} = \\mathbf{W}^{(2)} \\cdot \\mathbf{h}^{(1)} + \\mathbf{b}^{(2)}$$\n",
+    "$$y = \\phi(z^{(2)})$$\n",
+    "\n",
+    "Where:\n",
+    "- x is the input vector.\n",
+    "- $\\mathbf{W}^{(1)}$ and $\\mathbf{W}^{(2)}$ are the weight matrices of the first and second layers.\n",
+    "- $\\mathbf{b}^{(1)}$ and $\\mathbf{b}^{(2)}$ are the bias vectors of the first and second layers.\n",
+    "- $\\phi$ is the activation function. In this case, we will use the ReLU activation function.\n",
+    "\n",
+    "\n",
+    "Note that if we don't include any non-linear activation functions, the MLP is equivalent to a linear regression model. However, by adding non-linear activation functions, the MLP can learn complex patterns in the data. "
    ]
   },
   {
@@ -95,9 +128,15 @@
     "        self.W_ho = nn.Parameter(torch.randn(output_size, hidden_size) * 0.01)\n",
     "        self.b_ho = nn.Parameter(torch.zeros(output_size))\n",
     "\n",
-    "    def forward(self, x):\n",
-    "        # Apply the first linear layer with ReLU activation\n",
-    "        h = torch.relu(torch.matmul(x, self.W_ih.T) + self.b_ih)\n",
+    "    def forward(self, x, non_linear_activation='relu'):\n",
+    "        if non_linear_activation=='relu':\n",
+    "            # Apply the first linear layer with ReLU activation\n",
+    "            h = torch.relu(torch.matmul(x, self.W_ih.T) + self.b_ih)\n",
+    "        elif non_linear_activation=='sigmoid':\n",
+    "            # Apply the first linear layer with Sigmoid activation\n",
+    "            h = torch.sigmoid(torch.matmul(x, self.W_ih.T) + self.b_ih)\n",
+    "        else:\n",
+    "            h = torch.matmul(x, self.W_ih.T) + self.b_ih\n",
     "\n",
     "        # Apply the second linear layer\n",
     "        x = torch.matmul(h, self.W_ho.T) + self.b_ho\n",
@@ -117,6 +156,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def plot_decision_boundary(X, Y, title, model=None):\n",
+    "    x_min, x_max = X[:, 0].min() - 1, X[:, 0].max() + 1\n",
+    "    y_min, y_max = X[:, 1].min() - 1, X[:, 1].max() + 1\n",
+    "    xx, yy = np.meshgrid(np.arange(x_min, x_max, 0.01),\n",
+    "                         np.arange(y_min, y_max, 0.01))\n",
+    "    grid = torch.tensor(np.c_[xx.ravel(), yy.ravel()], dtype=torch.float32)\n",
+    "    plt.scatter(X[:, 0], X[:, 1], c=Y, edgecolors='k', marker='o')\n",
+    "    if model is not None:\n",
+    "        with torch.no_grad():\n",
+    "            Z = model(grid)\n",
+    "            Z = torch.sigmoid(Z).numpy()  # Apply sigmoid to the output\n",
+    "            Z = (Z > 0.5).astype(int)\n",
+    "        Z = Z.reshape(xx.shape)\n",
+    "        plt.contourf(xx, yy, Z, alpha=0.8)\n",
+    "    plt.title(title)\n",
+    "    plt.show()\n",
+    "    \n",
     "def generate_linear_data(N=100, D=2):\n",
     "    X = np.random.randn(N, D)\n",
     "    X[:N//2, :] += 1\n",
@@ -145,7 +201,14 @@
     "    \n",
     "    X = torch.tensor(X)\n",
     "    Y = torch.tensor(Y)\n",
-    "    return X, Y\n"
+    "    return X, Y\n",
+    "# Task 1: Linearly Separate Two Clouds of Dots\n",
+    "X_linear, Y_linear = generate_linear_data()\n",
+    "input_size = 2\n",
+    "output_size = 1\n",
+    "plot_decision_boundary(X_linear, Y_linear, 'Linear Data')\n",
+    "X_xor, Y_xor = generate_xor_data()\n",
+    "plot_decision_boundary(X_xor, Y_xor, 'XOR Data')\n"
    ]
   },
   {
@@ -170,36 +233,6 @@
     "        optimizer.step()\n",
     "        if (epoch + 1) % print_interval == 0:\n",
     "            print(f'Epoch [{epoch + 1}/{num_epochs}], Loss: {loss.item():.4f}')\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Plotting"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def plot_decision_boundary(model, X, Y, title):\n",
-    "    x_min, x_max = X[:, 0].min() - 1, X[:, 0].max() + 1\n",
-    "    y_min, y_max = X[:, 1].min() - 1, X[:, 1].max() + 1\n",
-    "    xx, yy = np.meshgrid(np.arange(x_min, x_max, 0.01),\n",
-    "                         np.arange(y_min, y_max, 0.01))\n",
-    "    grid = torch.tensor(np.c_[xx.ravel(), yy.ravel()], dtype=torch.float32)\n",
-    "    with torch.no_grad():\n",
-    "        Z = model(grid)\n",
-    "        Z = torch.sigmoid(Z).numpy()  # Apply sigmoid to the output\n",
-    "        Z = (Z > 0.5).astype(int)\n",
-    "    Z = Z.reshape(xx.shape)\n",
-    "    plt.contourf(xx, yy, Z, alpha=0.8)\n",
-    "    plt.scatter(X[:, 0], X[:, 1], c=Y, edgecolors='k', marker='o')\n",
-    "    plt.title(title)\n",
-    "    plt.show()\n"
    ]
   },
   {
