--- a/4-recurrent_neural_networks/tutorial_4_models-solutions.ipynb
+++ b/4-recurrent_neural_networks/tutorial_4_models-solutions.ipynb
@@ -260,7 +260,7 @@
     "# Optimize with Stochastic Gradient Descent \n",
     "optimizer = optim.SGD(model_perceptron.parameters(), lr=0.01)\n",
     "train_model(model_perceptron, criterion, optimizer, X_linear, Y_linear, num_epochs=1000, print_interval=100)\n",
-    "plot_decision_boundary(model_perceptron, X_linear, Y_linear, 'Perceptron - Linear Data')\n",
+    "plot_decision_boundary(X_linear, Y_linear, 'Perceptron - Linear Data', model=model_perceptron)\n",
     "\n",
     "# MLP\n",
     "hidden_size = 2\n",
@@ -268,7 +268,7 @@
     "criterion = nn.BCEWithLogitsLoss()\n",
     "optimizer = optim.SGD(model_mlp.parameters(), lr=0.01)\n",
     "train_model(model_mlp, criterion, optimizer, X_linear, Y_linear, num_epochs=1000, print_interval=100)\n",
-    "plot_decision_boundary(model_mlp, X_linear, Y_linear, 'MLP - Linear Data')\n",
+    "plot_decision_boundary(X_linear, Y_linear, 'MLP - Linear Data', model=model_mlp)\n",
     "\n",
     "# Task 2: XOR Task\n",
     "X_xor, Y_xor = generate_xor_data()\n",
@@ -278,14 +278,14 @@
     "criterion = nn.BCEWithLogitsLoss()\n",
     "optimizer = optim.SGD(model_perceptron.parameters(), lr=0.01)\n",
     "train_model(model_perceptron, criterion, optimizer, X_xor, Y_xor, num_epochs=10000, print_interval=1000)\n",
-    "plot_decision_boundary(model_perceptron, X_xor, Y_xor, 'Perceptron - XOR Data')\n",
+    "plot_decision_boundary(X_xor, Y_xor, 'Perceptron - XOR Data', model=model_perceptron)\n",
     "\n",
     "# MLP\n",
     "model_mlp = MLP(input_size, hidden_size, output_size)\n",
     "criterion = nn.BCEWithLogitsLoss()\n",
     "optimizer = optim.SGD(model_mlp.parameters(), lr=0.1)\n",
     "train_model(model_mlp, criterion, optimizer, X_xor, Y_xor, num_epochs=10000, print_interval=1000)\n",
-    "plot_decision_boundary(model_mlp, X_xor, Y_xor, 'MLP - XOR Data')"
+    "plot_decision_boundary(X_xor, Y_xor, 'MLP - XOR Data', model=model_mlp)"
    ]
   }
  ],
