add sigmoid to nets

--- a/4-recurrent_neural_networks/tutorial_4_models-solutions.ipynb
+++ b/4-recurrent_neural_networks/tutorial_4_models-solutions.ipynb
@@ -53,14 +53,14 @@
     "\n",
     "$$z = \\mathbf{w} \\cdot \\mathbf{x} + b = w_1 x_1 + w_2 x_2 + \\ldots + w_n x_n + b$$\n",
     "\n",
-    "$$y = \\phi(z)$$\n",
+    "$$y = \\gamma(z)$$\n",
     "\n",
     "Where:\n",
     "\n",
     "- $\\mathbf{w}$ is the weight vector\n",
     "- $\\mathbf{x}$ is the input vector\n",
     "- $b$ is the bias\n",
-    "- $\\phi$ is the activation function\n",
+    "- $\\gamma$ is the sigmoid function.\n",
     "\n",
     "To implement the perceptron in PyTorch, we can create a class that inherits from `torch.nn.Module` and the define the different elements of the network in the constructor and the forward pass in the `forward` method. You can use the matrix multiplication operation `torch.matmul` to calculate the weighted sum of the inputs and the bias."
    ]
@@ -79,6 +79,7 @@
     "\n",
     "    def forward(self, x):\n",
     "        x = torch.matmul(x, self.W.T) + self.b\n",
+    "        x = torch.sigmoid(x)\n",
     "        return x"
    ]
   },
@@ -93,13 +94,14 @@
     "$$z^{(1)} = \\mathbf{W}^{(1)} \\cdot \\mathbf{x} + \\mathbf{b}^{(1)}$$\n",
     "$$h^{(1)} = \\phi(z^{(1)})$$\n",
     "$$z^{(2)} = \\mathbf{W}^{(2)} \\cdot \\mathbf{h}^{(1)} + \\mathbf{b}^{(2)}$$\n",
-    "$$y = \\phi(z^{(2)})$$\n",
+    "$$y = \\gamma(z^{(2)})$$\n",
     "\n",
     "Where:\n",
     "- x is the input vector.\n",
     "- $\\mathbf{W}^{(1)}$ and $\\mathbf{W}^{(2)}$ are the weight matrices of the first and second layers.\n",
     "- $\\mathbf{b}^{(1)}$ and $\\mathbf{b}^{(2)}$ are the bias vectors of the first and second layers.\n",
     "- $\\phi$ is the activation function. In this case, we will use the ReLU activation function.\n",
+    "- $\\gamma$ is the output activation function. In this case, we will use the sigmoid activation function.\n",
     "\n",
     "\n",
     "Note that if we don't include any non-linear activation functions, the MLP is equivalent to a linear regression model. However, by adding non-linear activation functions, the MLP can learn complex patterns in the data. "
@@ -138,6 +140,7 @@
     "\n",
     "        # Apply the second linear layer\n",
     "        x = torch.matmul(h, self.W_ho.T) + self.b_ho\n",
+    "        x = torch.sigmoid(x)\n",
     "        return x\n"
    ]
   },
@@ -160,7 +163,6 @@
     "    xx, yy = np.meshgrid(np.arange(x_min, x_max, 0.01),\n",
     "                         np.arange(y_min, y_max, 0.01))\n",
     "    grid = torch.tensor(np.c_[xx.ravel(), yy.ravel()], dtype=torch.float32)\n",
-    "    plt.scatter(X[:, 0], X[:, 1], c=Y, edgecolors='k', marker='o')\n",
     "    if model is not None:\n",
     "        with torch.no_grad():\n",
     "            Z = model(grid)\n",
@@ -168,6 +170,7 @@
     "            Z = (Z > 0.5).astype(int)\n",
     "        Z = Z.reshape(xx.shape)\n",
     "        plt.contourf(xx, yy, Z, alpha=0.8)\n",
+    "    plt.scatter(X[:, 0], X[:, 1], c=Y, edgecolors='k', marker='o')\n",
     "    plt.title(title)\n",
     "    plt.show()\n",
     "    \n",
@@ -254,7 +257,7 @@
     "# Perceptron\n",
     "model_perceptron = Perceptron(input_size, output_size)\n",
     "# Compute the binary Cross Entropy Loss \n",
-    "criterion = nn.BCEWithLogitsLoss()\n",
+    "criterion = nn.BCELoss()\n",
     "# Optimize with Stochastic Gradient Descent \n",
     "optimizer = optim.SGD(model_perceptron.parameters(), lr=0.01)\n",
     "train_model(model_perceptron, criterion, optimizer, X_linear, Y_linear, num_epochs=1000, print_interval=100)\n",
@@ -263,7 +266,7 @@
     "# MLP\n",
     "hidden_size = 2\n",
     "model_mlp = MLP(input_size, hidden_size, output_size)\n",
-    "criterion = nn.BCEWithLogitsLoss()\n",
+    "criterion = nn.BCELoss()\n",
     "optimizer = optim.SGD(model_mlp.parameters(), lr=0.01)\n",
     "train_model(model_mlp, criterion, optimizer, X_linear, Y_linear, num_epochs=1000, print_interval=100)\n",
     "plot_decision_boundary(X_linear, Y_linear, 'MLP - Linear Data', model=model_mlp)\n",
@@ -273,14 +276,14 @@
     "\n",
     "# Perceptron\n",
     "model_perceptron = Perceptron(input_size, output_size)\n",
-    "criterion = nn.BCEWithLogitsLoss()\n",
+    "criterion = nn.BCELoss()\n",
     "optimizer = optim.SGD(model_perceptron.parameters(), lr=0.01)\n",
     "train_model(model_perceptron, criterion, optimizer, X_xor, Y_xor, num_epochs=10000, print_interval=1000)\n",
     "plot_decision_boundary(X_xor, Y_xor, 'Perceptron - XOR Data', model=model_perceptron)\n",
     "\n",
     "# MLP\n",
     "model_mlp = MLP(input_size, hidden_size, output_size)\n",
-    "criterion = nn.BCEWithLogitsLoss()\n",
+    "criterion = nn.BCELoss()\n",
     "optimizer = optim.SGD(model_mlp.parameters(), lr=0.1)\n",
     "train_model(model_mlp, criterion, optimizer, X_xor, Y_xor, num_epochs=10000, print_interval=1000)\n",
     "plot_decision_boundary(X_xor, Y_xor, 'MLP - XOR Data', model=model_mlp)"
