--- a/4-recurrent_neural_networks/tutorial_4_models-solutions.ipynb
+++ b/4-recurrent_neural_networks/tutorial_4_models-solutions.ipynb
@@ -225,7 +225,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train_model(model, criterion, optimizer, X, Y, num_epochs=1000, print_interval=100):\n",
+    "def train_model(model,  X, Y, num_epochs=1000, print_interval=100):\n",
+    "    criterion = nn.BCEWithLogitsLoss()\n",
+    "    optimizer = optim.SGD(model.parameters(), lr=0.1)\n",
     "    for epoch in range(num_epochs):\n",
     "        optimizer.zero_grad()\n",
     "        outputs = model(X)\n",
@@ -256,19 +258,13 @@
     "\n",
     "# Perceptron\n",
     "model_perceptron = Perceptron(input_size, output_size)\n",
-    "# Compute the binary Cross Entropy Loss \n",
-    "criterion = nn.BCELoss()\n",
-    "# Optimize with Stochastic Gradient Descent \n",
-    "optimizer = optim.SGD(model_perceptron.parameters(), lr=0.01)\n",
-    "train_model(model_perceptron, criterion, optimizer, X_linear, Y_linear, num_epochs=1000, print_interval=100)\n",
+    "train_model(model_perceptron, X_linear, Y_linear, num_epochs=1000, print_interval=100)\n",
     "plot_decision_boundary(X_linear, Y_linear, 'Perceptron - Linear Data', model=model_perceptron)\n",
     "\n",
     "# MLP\n",
     "hidden_size = 2\n",
     "model_mlp = MLP(input_size, hidden_size, output_size)\n",
-    "criterion = nn.BCELoss()\n",
-    "optimizer = optim.SGD(model_mlp.parameters(), lr=0.01)\n",
-    "train_model(model_mlp, criterion, optimizer, X_linear, Y_linear, num_epochs=1000, print_interval=100)\n",
+    "train_model(model_mlp, X_linear, Y_linear, num_epochs=1000, print_interval=100)\n",
     "plot_decision_boundary(X_linear, Y_linear, 'MLP - Linear Data', model=model_mlp)\n",
     "\n",
     "# Task 2: XOR Task\n",
@@ -276,16 +272,12 @@
     "\n",
     "# Perceptron\n",
     "model_perceptron = Perceptron(input_size, output_size)\n",
-    "criterion = nn.BCELoss()\n",
-    "optimizer = optim.SGD(model_perceptron.parameters(), lr=0.01)\n",
-    "train_model(model_perceptron, criterion, optimizer, X_xor, Y_xor, num_epochs=10000, print_interval=1000)\n",
+    "train_model(model_perceptron, X_xor, Y_xor, num_epochs=10000, print_interval=1000)\n",
     "plot_decision_boundary(X_xor, Y_xor, 'Perceptron - XOR Data', model=model_perceptron)\n",
     "\n",
     "# MLP\n",
     "model_mlp = MLP(input_size, hidden_size, output_size)\n",
-    "criterion = nn.BCELoss()\n",
-    "optimizer = optim.SGD(model_mlp.parameters(), lr=0.1)\n",
-    "train_model(model_mlp, criterion, optimizer, X_xor, Y_xor, num_epochs=10000, print_interval=1000)\n",
+    "train_model(model_mlp, X_xor, Y_xor, num_epochs=10000, print_interval=1000)\n",
     "plot_decision_boundary(X_xor, Y_xor, 'MLP - XOR Data', model=model_mlp)"
    ]
   }
