--- a/4-recurrent_neural_networks/tutorial_4_models-solutions.ipynb
+++ b/4-recurrent_neural_networks/tutorial_4_models-solutions.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Introduction to Neural Networks: Perceptron and Multi-Layer Perceptron\n",
+    "# Feedforward models: Perceptron and Multi-Layer Perceptron\n",
     "\n",
     "In this tutorial, we will learn how to use Perceptron and Multi-Layer Perceptron (MLP) neural networks to solve simple classification tasks. We will walk through the necessary steps to implement and train these networks using PyTorch.\n",
     "\n",
@@ -13,7 +13,9 @@
     "2. Models\n",
     "    - Perceptron\n",
     "    - Multi-Layer Perceptron\n",
-    "2. Data\n"
+    "2. Generating data\n",
+    "3. Training\n",
+    "4. Evaluation\n"
    ]
   },
   {
@@ -146,7 +148,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data"
+    "## Generating data"
    ]
   },
   {
@@ -156,6 +158,9 @@
    "outputs": [],
    "source": [
     "def plot_decision_boundary(X, Y, title, model=None):\n",
+    "    \"\"\"\n",
+    "    Function to plot the decision boundary and data points of a model\n",
+    "    \"\"\"\n",
     "    x_min, x_max = X[:, 0].min() - 1, X[:, 0].max() + 1\n",
     "    y_min, y_max = X[:, 1].min() - 1, X[:, 1].max() + 1\n",
     "    xx, yy = np.meshgrid(np.arange(x_min, x_max, 0.01),\n",
@@ -163,8 +168,11 @@
     "    grid = torch.tensor(np.c_[xx.ravel(), yy.ravel()], dtype=torch.float32)\n",
     "    if model is not None:\n",
     "        with torch.no_grad():\n",
+    "            # Get the model's output for the grid points\n",
     "            Z = model(grid)\n",
-    "            Z = torch.sigmoid(Z).numpy()  # Apply sigmoid to the output\n",
+    "            # Apply sigmoid to the output\n",
+    "            Z = torch.sigmoid(Z).numpy()\n",
+    "            # Convert the output to binary\n",
     "            Z = (Z > 0.5).astype(int)\n",
     "        Z = Z.reshape(xx.shape)\n",
     "        plt.contourf(xx, yy, Z, alpha=0.8)\n",
@@ -173,6 +181,9 @@
     "    plt.show()\n",
     "    \n",
     "def generate_linear_data(N=100, D=2):\n",
+    "    \"\"\"\n",
+    "    Function to generate linearly separable data\n",
+    "    \"\"\"\n",
     "    X = np.random.randn(N, D)\n",
     "    X[:N//2, :] += 1\n",
     "    X[N//2:, :] -= 1\n",
@@ -182,6 +193,9 @@
     "    return X, Y\n",
     "\n",
     "def generate_xor_data(n_points=100):\n",
+    "    \"\"\"\n",
+    "    Function to generate XOR data\n",
+    "    \"\"\"\n",
     "    # Base XOR points\n",
     "    base_points = np.array([[0, 0], [0, 1], [1, 0], [1, 1]], dtype=np.float32)\n",
     "    base_labels = np.array([0, 1, 1, 0], dtype=np.float32)\n",
@@ -207,7 +221,7 @@
     "output_size = 1\n",
     "plot_decision_boundary(X_linear, Y_linear, 'Linear Data')\n",
     "X_xor, Y_xor = generate_xor_data()\n",
-    "plot_decision_boundary(X_xor, Y_xor, 'XOR Data')\n"
+    "plot_decision_boundary(X_xor, Y_xor, 'XOR Data')"
    ]
   },
   {
@@ -224,13 +238,18 @@
    "outputs": [],
    "source": [
     "def train_model(model,  X, Y, num_epochs=1000, print_interval=100):\n",
+    "    # Define the loss function and optimizer\n",
     "    criterion = nn.BCEWithLogitsLoss()\n",
     "    optimizer = optim.SGD(model.parameters(), lr=0.1)\n",
     "    for epoch in range(num_epochs):\n",
     "        optimizer.zero_grad()\n",
+    "        # Forward pass\n",
     "        outputs = model(X)\n",
+    "        # Calculate the loss\n",
     "        loss = criterion(outputs, Y.float().view(-1, 1))\n",
+    "        # Backward pass\n",
     "        loss.backward()\n",
+    "        # Update the weights\n",
     "        optimizer.step()\n",
     "        if (epoch + 1) % print_interval == 0:\n",
     "            print(f'Epoch [{epoch + 1}/{num_epochs}], Loss: {loss.item():.4f}')\n"
